# ai-trip-planner

./: .env  README.md  main.py  pyproject.toml  test_groq.py
app/: main.py
app/agent/: graph.py  groq_client.py  state.py
app/agent/nodes/: accommodation_node.py  budget_check_node.py  local_tips_node.py  packing_list_node.py  parse_node.py  plan_node.py  preferences_node.py  replan_node.py  transportation_node.py  validate_node.py  weather_node.py
app/agent/tools/: weather_tool.py
app/static/: app.js  index.html  styles.css
docs/: architecture.md  functional-demo-guide.md  technical-concepts-guide.md
